# diablo

./: .gitignore  log.txt  repos.txt
diasurgical/diasurgical_devilutionx-gamelist/CMake/functions/: FetchContent_MakeAvailableExcludeFromAll.cmake
diasurgical/diasurgical_devilutionx-graphics-tools/cmake/: mingwcc64.toolchain.cmake
diasurgical/diasurgical_libmpq/: .gitignore  configure.ac
diasurgical/diasurgical_libmpq/libmpq/: common.c  common.h  endian.h  explode.h  extract.c  extract.h  huffman.c  huffman.h  mpq-internal.h  mpq.c  mpq.h  platform.h
planners/BetweenWalls_portal/: README.md  index.html
planners/Cairhiin_d2-builder/: README.md  package.json
planners/Cairhiin_d2-builder/client/: README.md  package.json
planners/Cairhiin_d2-builder/client/src/: App.css  App.js  index.css  index.js
planners/Cairhiin_d2-builder/server/: server.js
planners/Cairhiin_d2-builder/server/models/: Build.js  User.js  index.js
planners/Cairhiin_d2-builder/server/routes/: auth.js  configSecret.js
planners/Kuukuna93_d2-planner/: .envTemplate  App.tsx  README.md  app.json  gluestack-ui.config.ts  package-lock.json  package.json
planners/Kuukuna93_d2-planner/android/: settings.gradle
planners/Kuukuna93_d2-planner/android/app/: build.gradle
planners/Kuukuna93_d2-planner/ios/: Podfile
planners/Kuukuna93_d2-planner/ios/Destiny2Planner/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
planners/Kuukuna93_d2-planner/ios/Destiny2Planner.xcodeproj/: project.pbxproj
planners/Kuukuna93_d2-planner/ios/Destiny2PlannerTests/: Destiny2PlannerTests.m
planners/Kuukuna93_d2-planner/src/components/: authProvider.tsx
planners/Kuukuna93_d2-planner/src/helpers/: apiClient.ts  storage.ts  token.ts  types.tsx
planners/Moreina_planner/: index.html
planners/Moreina_planner/data/: all.css  all.js  all_equipment.js  amazon.js  assassin.js  barbarian.js  druid.js  necromancer.js  paladin.js  sorceress.js
planners/Nostrademous_Diablo-3-Battle-Simulation/: DmgCalc.py
planners/eduardocmoreno_d2planner/: tsconfig.json
planners/eduardocmoreno_d2planner/dataRefactoring/: armor.js  dataRefactoring.js  gems.js  index.html  itemStatCost.js  misc.js  properties.js  runewords.js  setItems.js  skills.js  strings.js  uniqueItems.js  weapons.js
planners/eduardocmoreno_d2planner/public/: site-structure-tree.txt
planners/eduardocmoreno_d2planner/src/: App.tsx  react-app-env.d.ts
planners/omm7813_diablo_nav2_simulation/diablo_description/: CMakeLists.txt  package.xml
planners/omm7813_diablo_nav2_simulation/diablo_nav2/: CMakeLists.txt  package.xml
planners/omm7813_diablo_nav2_simulation/diablo_nav2/config/behavior_tree/: navigate_through_poses_bt.xml  navigate_to_pose_bt.xml
planners/omm7813_diablo_nav2_simulation/diablo_nav2/launch/: navigation_launch.py  rviz_launch.py
planners/omm7813_diablo_nav2_simulation/diablo_nav2/params/: nav2_params.yaml
planners/omm7813_diablo_nav2_simulation/diablo_nav2/src/: angles.txt  goal_points_generator.cpp  headings_generator.cpp  plot_obstacle_angles.py
(+355 files in other folders)
