<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diablo_nav2</name>
  <version>0.0.0</version>
  <description>navigation package for diablo robot</description>
  <maintainer email="omm7813@nyu.edu">Omar Mostafa</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>data_msgs</depend>
  <depend>motion_msgs</depend>
  <depend>diablo_utils</depend>
  <depend>diablo_body</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
